# kizuna

./: .gitignore  .gitmodules  .hc  LICENSE  README.md  default.nix  holochain_version.nix  lair-keystore-config.yaml  store_file  store_file-shm  store_file-wal
.circleci/: config.yml
dnas/lobby/: .gitignore  .hc  Cargo.toml  Kizuna_Bumping_Proccess.md  README.md  conductor-config.toml  default.nix
dnas/lobby/Kizuna.dna.workdir/: dna.yaml
dnas/lobby/commons/file_types/: Cargo.toml
dnas/lobby/commons/file_types/src/: lib.rs
dnas/lobby/dna/: dna.yaml
dnas/lobby/kizuna.dna.workdir/: dna.json  dna.yaml
dnas/lobby/tests/: package-lock.json  package.json
dnas/lobby/tests/src/: functions.ts  index.ts  install.ts  kizuna.ts  types.ts  utils.ts
dnas/lobby/tests/src/contacts/: index.ts
dnas/lobby/tests/src/p2pmessageasync/: index.ts
dnas/lobby/tests/src/request/: index.ts
dnas/lobby/tests/src/zomes/: aggregator.ts  bugging.ts  contacts.ts  group.ts  preference.ts  request.ts
dnas/lobby/tests/src/zomes/group/: group.ts  group_message.ts  index.ts  utils.ts  zome_fns.ts
dnas/lobby/tests/src/zomes/group/crud/: addAndRemoveMembers.ts  createGroup.ts  updateGroupName.ts
dnas/lobby/tests/src/zomes/group/group_message/: getLatestMessagesForAllGroups.ts  getMessagesByGroupByTimestamp.ts  getNextGroupMessages.ts  getPreviousGroupMessages.ts  pinMessage.ts  readGroupMessage.ts  sendMessage.ts  typingIndicator.ts
dnas/lobby/tests/src/zomes/group/validations/: validateCreateGroup.ts  validateUpdateGroup.ts
dnas/lobby/tests/src/zomes/preference/: index.ts
dnas/lobby/tests/src/zomes/preference/global/: global.ts
dnas/lobby/tests/src/zomes/preference/per_agent/: per_agent.ts
dnas/lobby/tests/src/zomes/preference/per_group/: per_group.ts
dnas/lobby/workdir/dna/: dna.yaml
dnas/lobby/workdir/happ/: happ.yaml
dnas/lobby/workdir/webhapp/: web-happ.yaml
dnas/lobby/zomes/aggregator/: Cargo.toml
dnas/lobby/zomes/aggregator/coordinator/: Cargo.toml
dnas/lobby/zomes/aggregator/coordinator/src/: lib.rs
dnas/lobby/zomes/aggregator/src/: lib.rs  types.rs
dnas/lobby/zomes/bugging/: Cargo.toml
dnas/lobby/zomes/bugging/src/: foo.rs  lib.rs  message.rs
dnas/lobby/zomes/contacts/: Cargo.toml
dnas/lobby/zomes/contacts/coordinator/: Cargo.toml
dnas/lobby/zomes/contacts/coordinator/src/: lib.rs
dnas/lobby/zomes/contacts/integrity/: Cargo.toml
dnas/lobby/zomes/contacts/integrity/src/: lib.rs
dnas/lobby/zomes/contacts/src/: entries.rs  lib.rs  utils.rs
dnas/lobby/zomes/contacts/src/entries/: contacts.rs
dnas/lobby/zomes/contacts/src/entries/contacts/: add_contacts.rs  block_contacts.rs  handlers.rs  helpers.rs  in_blocked.rs  in_contacts.rs  list_added.rs  list_blocked.rs  remove_contacts.rs  unblock_contacts.rs
dnas/lobby/zomes/contacts/types/coordinator_types/: Cargo.toml
dnas/lobby/zomes/contacts/types/coordinator_types/src/: lib.rs
dnas/lobby/zomes/contacts/types/integrity_types/: Cargo.toml
dnas/lobby/zomes/contacts/types/integrity_types/src/: lib.rs
dnas/lobby/zomes/group/: Cargo.toml
dnas/lobby/zomes/group/coordinator/: Cargo.toml
dnas/lobby/zomes/group/coordinator/src/: lib.rs  post_commit.rs  signals.rs  utils.rs
dnas/lobby/zomes/group/coordinator/src/zome_fns/: group.rs  group_message.rs
dnas/lobby/zomes/group/integrity/: Cargo.toml
dnas/lobby/zomes/group/integrity/src/: lib.rs  utils.rs  validations.rs
dnas/lobby/zomes/group/integrity/src/validations/: create_group.rs  update_group.rs
dnas/lobby/zomes/group/src/: entries.rs  lib.rs  signals.rs  test_utils.rs  utils.rs  validation_rules.rs
dnas/lobby/zomes/group/src/entries/: group.rs  group_encryption.rs  group_message.rs
dnas/lobby/zomes/group/src/entries/group/: add_members.rs  create_group.rs  get_all_my_groups.rs  group_helpers.rs  handlers.rs  remove_members.rs  update_group_avatar.rs  update_group_name.rs  validations.rs
dnas/lobby/zomes/group/src/validation_rules/: run_validations.rs  validate_create_group.rs  validate_update_group.rs
dnas/lobby/zomes/group/types/coordinator_types/: Cargo.toml
dnas/lobby/zomes/group/types/integrity_types/: Cargo.toml
dnas/lobby/zomes/joining_code/: Cargo.toml
dnas/lobby/zomes/joining_code/src/: lib.rs
dnas/lobby/zomes/p2pmessage/: Cargo.toml
dnas/lobby/zomes/p2pmessage/coordinator/: Cargo.toml
dnas/lobby/zomes/p2pmessage/coordinator/src/: lib.rs
dnas/lobby/zomes/p2pmessage/integrity/: Cargo.toml
dnas/lobby/zomes/p2pmessage/integrity/src/: lib.rs
dnas/lobby/zomes/p2pmessage/src/: lib.rs
dnas/lobby/zomes/p2pmessage/types/coordinator_types/: Cargo.toml
dnas/lobby/zomes/p2pmessage/types/integrity_types/: Cargo.toml
dnas/lobby/zomes/p2pmessageasync/: Cargo.toml
dnas/lobby/zomes/p2pmessageasync/src/: lib.rs  utils.rs
dnas/lobby/zomes/p2pmessageasync/src/entries/: message.rs
dnas/lobby/zomes/preference/: Cargo.toml
dnas/lobby/zomes/preference/coordinator/: Cargo.toml
dnas/lobby/zomes/preference/coordinator/src/: handlers.rs  lib.rs
dnas/lobby/zomes/preference/integrity/: Cargo.toml
dnas/lobby/zomes/preference/integrity/src/: lib.rs
dnas/lobby/zomes/preference/src/: entries.rs  lib.rs
dnas/lobby/zomes/preference/src/entries/: preference.rs
dnas/lobby/zomes/preference/types/coordinator_types/: Cargo.toml
dnas/lobby/zomes/preference/types/integrity_types/: Cargo.toml
dnas/lobby/zomes/profiles/: Cargo.toml
dnas/lobby/zomes/profiles/coordinator/: Cargo.toml
dnas/lobby/zomes/profiles/integrity/: Cargo.toml
dnas/lobby/zomes/profiles/src/: lib.rs
dnas/lobby/zomes/profiles/types/: Cargo.toml
dnas/lobby/zomes/profiles/types/coordinator_types/: Cargo.toml
dnas/lobby/zomes/profiles/types/integrity_types/: Cargo.toml
dnas/lobby/zomes/profiles/types/src/: lib.rs
dnas/lobby/zomes/request/: Cargo.toml
dnas/lobby/zomes/request/src/: lib.rs  utils.rs
dnas/lobby/zomes/request/src/entries/: request.rs
dnas/lobby/zomes/username/: Cargo.toml
dnas/lobby/zomes/username/src/: lib.rs
dnas/lobby/zomes/webrtc/: Cargo.toml
dnas/lobby/zomes/webrtc/src/: lib.rs
ui/: .env  .env.production  (+10 more)
(+626 files in other folders)
