[package]
name = "aggregator"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "aggregator"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
file_types = { version = "0.0.1", path = "../../commons/file_types" }
derive_more = "0"
serde = "1"
hdk = "0.0.118"
holo_hash = {version = "*", features = ["encoding"]}