[package]
name = "aggregator"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "aggregator"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {version = "0.0.121", features = ["encoding"]}
serde = "1"
derive_more = "0"
file_types = { version = "0.0.1", path = "../../commons/file_types" }