[package]
name = "contacts"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "contacts"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {version = "0.0.121", features = ["encoding"]}
serde = "1"
derive_more = "0"
hc_contacts = {git = "https://github.com/holochain-open-dev/contacts", package = "contacts", branch="main"}