[package]
name = "contacts"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "contacts"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
hdk = {version = "0.0.123", features = ["encoding"]}
hc_contacts = {git = "https://github.com/holochain-open-dev/contacts", package = "contacts", branch="hc-0.0.127"}