[package]
name = "contacts"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "contacts"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
hdk = {version = "0.0.138", features = ["encoding"]}
hc_contacts = {git = "https://github.com/holochain-open-dev/contacts", package = "contacts", rev="56425a98c52ac4d03dadef8b518ba74df0c172ef"}