[package]
name = "group"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "group"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
holo_hash = {git = "https://github.com/holochain/holochain", rev = "holochain-0.0.109", package = "holo_hash", version = "0.0.8", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "holochain-0.0.109", package = "hdk", version = "0.0.109"}
file_types = { version = "0.0.1", path = "../../commons/file_types" }
