[package]
name = "group"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "group"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
hdk = "0.0.118"
holo_hash = {version = "*", features = ["encoding"]}
file_types = { version = "0.0.1", path = "../../commons/file_types" }
