[package]
name = "p2pmessage"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "p2pmessage"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
hdk = {version = "0.0.138", features = ["encoding"]}
p2pmessage = {git = "https://github.com/hc-institute-japan/p2pmessage-zome", rev = "a4906917c0b47fafd6e8d25902c0ed361c99c38e", package = "p2pmessage"}
