[package]
name = "p2pmessage"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "p2pmessage"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
hdi = "0.0.14"
hdk = {version = "0.0.142", features = ["encoding"]}
p2pmessage_integrity = {git = "https://github.com/hc-institute-japan/p2pmessage-zome", rev = "265c25cc3ebc5e1c8fd785fbe9385182979345c1", package = "p2pmessage_integrity"}
p2pmessage_coordinator = {git = "https://github.com/hc-institute-japan/p2pmessage-zome", rev = "265c25cc3ebc5e1c8fd785fbe9385182979345c1", package = "p2pmessage_coordinator"}