[package]
name = "preference"
version = "0.0.1"
authors = ["hcij"]
edition = "2018"

[lib]
name = "preference"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0"
serde = "1"
holo_hash = {git = "https://github.com/holochain/holochain", rev = "12dfef0b2a710304697ddcd9ee731b4fe9933b0f", package = "holo_hash", version = "0.0.7", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "12dfef0b2a710304697ddcd9ee731b4fe9933b0f", package = "hdk", version = "0.0.108"}