[package]
name = "preference"
version = "0.0.1"
authors = ["hcij"]
edition = "2018"

[lib]
name = "preference"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0"
serde = "1"
holo_hash = {git = "https://github.com/holochain/holochain", rev = "holochain-0.0.109", package = "holo_hash", version = "0.0.8", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "holochain-0.0.109", package = "hdk", version = "0.0.109"}