[package]
name = "profiles"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "profiles"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
profiles = {git = "https://github.com/holochain-open-dev/profiles", rev="for-hdk-v0.0.124", package = "hc_zome_profiles"}
hdk = {version = "0.0.124", features = ["encoding"]}