[package]
name = "request"
version = "0.0.1"
authors = [ "nkgardose" ]
edition = "2018"

[lib]
name = "request"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
holo_hash = {version = "0.0.6", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "d7a6ac364a6a50bee6297ec2041e8c1ffe0be7dc", package = "hdk", version = "0.0.107"}
