[package]
name = "request"
version = "0.0.1"
authors = [ "nkgardose" ]
edition = "2018"

[lib]
name = "request"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
holo_hash = {git = "https://github.com/holochain/holochain", rev = "holochain-0.0.112", package = "holo_hash", version = "0.0.10", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "holochain-0.0.112", package = "hdk", version = "0.0.112"}