[package]
name = "username"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "username"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
username = {git = "https://github.com/holochain-open-dev/username-zome", branch = "bump-hdk-0.0.100", package = "username"}
hdk = "0.0.118"
holo_hash = {version = "*", features = ["encoding"]}