[package]
name = "username"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "username"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = {version = "0.0.121", features = ["encoding"]}
serde = "1"
derive_more = "0"
username = {git = "https://github.com/holochain-open-dev/username-zome", branch = "bump-hdk-0.0.100", package = "username"}