[package]
name = "profiles_coordinator"
description = "Coordinator zome for profiles"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "profiles_coordinator"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
hdk = {version = "0.0.138", features = ["encoding"]}
hc_zome_profiles_coordinator = {git = "https://github.com/tatssato/profiles", rev = "619589b6b1a84a6fc3d24bdfb34f39ee86a90d0f"}