[package]
name = "profiles_integrity"
description = "Integrity zome for profiles"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "profiles_integrity"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
holochain_deterministic_integrity = "=0.0.10"
hc_zome_profiles_integrity = {git = "https://github.com/tatssato/profiles", rev = "619589b6b1a84a6fc3d24bdfb34f39ee86a90d0f"}
