[package]
name = "profiles_types"
description = "types declaration for profiles"
version = "0.0.1"
authors = [ "hcij" ]
edition = "2018"

[lib]
name = "profiles_types"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
hdi = "0.0.14"
hc_zome_profiles_types = {git = "https://github.com/holochain-open-dev/profiles", rev = "72f411561beeec350c77441d655a24618847068d", pacakge = "hc_zome_profiles_types"}
