[package]
name = "p2pmessage_coordinator_types"
version = "0.0.1"
authors = ["nickolie.pangarungan@gmail.com", "tats@beyonder.systems"]
edition = "2018"

[lib]
name = "p2pmessage_coordinator_types"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.138", features = ["encoding"]}
hc_p2pmessage_coordinator_types = {git = "https://github.com/hc-institute-japan/p2pmessage-zome", rev = "8e0468d011cab1526b8bd1a4f31f4f70bfcfc011", package = "p2pmessage_coordinator_types"}