[package]
name = "p2pmessage_integrity_types"
version = "0.0.1"
authors = ["nickolie.pangarungan@gmail.com", "tats@beyonder.systems"]
edition = "2018"

[lib]
name = "p2pmessage_integrity_types"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"

hdi = "0.0.14"
hc_p2pmessage_integrity_types = {git = "https://github.com/hc-institute-japan/p2pmessage-zome", branch = "hdk-0.0.145", package = "p2pmessage_integrity_types"}